# MDA_project_group30

./: Cleaned XGBOOST full flow.ipynb  Exploration-analyses.ipynb  Exploration-randomforest.ipynb  Exploration-xgboost.ipynb  Exploration.ipynb  MDA_Project.ipynb  README.md  RandomForest_XGBoost.ipynb  app.py  appShiny.py
Code/: MDA_Model.ipynb  MDA_Project.ipynb
Data/: missing_domains_final.xlsx
Kedro/: README.md  pyproject.toml  requirements.txt  ~$CESS KEY AWS.docx
Kedro/conf/base/: catalog.yml  parameters.yml
Kedro/src/mda/: pipeline_registry.py  settings.py
Kedro/src/mda/pipelines/data_preprocessing/: nodes.py  pipeline.py
Kedro/src/mda/pipelines/llm_topic_modeling/: __init__.py  nodes.py  pipeline.py
Kedro/src/mda/pipelines/model_training/: __init__.py  nodes.py  pipeline.py
Kedro/src/mda/pipelines/raw_processing/: nodes.py  pipeline.py
conf/base/: catalog.yml  parameters_data_loading.yml
src/mda/: __init__.py  __main__.py  settings.py
src/mda/pipelines/data_loading/: __init__.py  nodes.py  pipeline.py
